--- a/config/prow/plugins.yaml
+++ b/config/prow/plugins.yaml
@@ -328,7 +328,8 @@ milestone_applier:
   kubernetes/k8s.io:
     master: v1.21
   kubernetes/kops:
-    master: v1.20
+    master: v1.21
+    release-1.19: v1.20
     release-1.19: v1.19
     release-1.18: v1.18
     release-1.17: v1.17
